Closed Bug 1331828 Opened 9 years ago Closed 9 years ago

First boot causes crashes on Windows

Categories

(Core :: Graphics: WebRender, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla54

People

(Reporter: sotaro, Assigned: sotaro)

References

Details

Attachments

(1 file)

When I build graphics branch locally, first boot causes crashes.
Blocks: webrender
Assignee: nobody → sotaro.ikeda.g
I saw another problem with latest source, e10s with multiple tabs caused tab crash.
I was seeing at least one crash caused by the call to SetLayerObserverEpoch in TabChild.cpp getting called before the WebRenderBridge was properly initialized. I have patches pending that will fix that (some in bug 1331509, and one in bug 1326421). If there are other crashes that you're seeing that are different then we'll need to investigate those.
(In reply to Sotaro Ikeda [:sotaro] from comment #1) > I saw another problem with latest source, e10s with multiple tabs caused tab > crash. It was caused by the call to SetLayerObserverEpoch. It seems same to comment 2. The crash of comment 0 is happened in WebRenderBridgeParent::RecvDPGetSnapshot().
Depends on: 1331847
The crash was caused by the following assert failure in gleam. pub fn read_pixels_into_buffer(x: GLint, y: GLint, width: GLsizei, height: GLsizei, format: GLenum, pixel_type: GLenum, dst_buffer: &mut [u8]) { // Assumes that the user properly allocated the size for dst_buffer. assert!(calculate_length(width, height, format, pixel_type) == dst_buffer.len());
argument buffer_size of wr_readback_into_buffer() is usize, but it is uint32_t in webrender_ffi.h. pub extern fn wr_readback_into_buffer(window: &mut WrWindowState, width: u32, height: u32, dst_buffer: *mut u8, buffer_size: usize) {
It is a regression of Bug 1319170.
Blocks: 1319170
Pushed by sikeda@mozilla.com: https://hg.mozilla.org/projects/graphics/rev/543c59f9d5df Fix ffi inconsistency of wr_readback_into_buffer() r=gfx?
Status: NEW → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla54
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: