Bug 1331828 - Fix ffi inconsistency of wr_readback_into_buffer() r=gfx?